# Math_extra

./: .gitignore  CMakeLists.txt  Deprecated.py  README.md  __init__.py  integrate.py  makefile  math.py  special_functions.py  uninstall.cmake.in  windowing.py
src/: Windowing.cpp  Windowing.h  Windowing.tpp  math_extra.cpp  math_extra.h  python_submodule.cppp  python_submodule.hhh  special_functions.cpp  special_functions.h  special_functions_py.cppp  special_functions_py.hhh
